--- a/www/index.html
+++ b/www/index.html
@@ -8,17 +8,12 @@
 	<script src="../bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="../scripts/fabric.js" type="text/javascript"></script>
 	<script src="../scripts/jscolor/jscolor.js" type="text/javascript"></script>
-	<!--Google Login Script-->
-	<script type="text/javascript">
-	(function() {
-		var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-		po.src = 'https://apis.google.com/js/client:plusone.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-	})();
-	</script>
-	<!--End of Google Login Script-->
+	<script src="../scripts/jquery.tools.min.js"></script>
 	<!--Canvas Script--> <!--Maybe should move to another file? When it's more or less done?-->
 	<script type = "text/javascript">
+	if (window.location.href.indexOf('#_=_') > 0) {
+    	window.location = window.location.href.replace(/#.*/, '');
+	}
 	var canvas;
 	var bgcolor = '#FFFFFF';
 	var blkcolor = '#000000',
@@ -137,7 +132,12 @@
   	}
 
 	// Code to set limit to boundaries //
-	function saveOrig(e) { orig = fabric.util.object.clone(e.target); }
+	function saveOrig(e) { 
+		if(e.target.get('type')=="i-text") {
+			canvas.getActiveObject().tooltip({ effect: 'slide'});
+  		}
+  		orig = fabric.util.object.clone(e.target); 
+  	}
 	function setLimit(e){
 		var curr=e.target;
 		curr.setCoords();
@@ -263,6 +263,7 @@
 			curr.setCoords();
 		}
 	}
+
 	</script>
 	<style>
 	table.center {
@@ -301,13 +302,16 @@
 						This text is displayed if your browser does not support HTML5 Canvas.
 					</canvas>
 				</div>
+				<div class="tooltip">
+					<a href="/release-notes">What's new in 3.2</a>
+				</div>
 			</td>
 
 			<!--RIGHT: Info++ -->
 			<td style="padding:10px">
 				<!--BOARD NAME/SELECTOR-->
 				<div id="boardInfo" align="left">
-					You are currently viewing <strong>Board{{ currBoard.boardID }} [{{ currBoard.boardUser }}]</strong><br>
+					You are currently viewing <strong>{{ currBoard.boardName }}</strong><br>
 				</div>
 				<span>Want to view another board? Click here -> </span>
 				<div class="btn-group">
