--- a/www/mainpage.html
+++ b/www/mainpage.html
@@ -4,39 +4,16 @@
 	<title>PinnerSpace - Virtual Pinboard</title>
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap-theme.min.css">
-		<script src="../scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+	<script src="../scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
 	<script src="../bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-
 	<link type="text/css" rel="stylesheet" href="../stylesheets/mainpage.css">
-	<!--Google Login Script-->
-	<script type="text/javascript">
-	(function() {
-		var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-		po.src = 'https://apis.google.com/js/client:plusone.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-	})();
-	function signinCallback(authResult) {
-		if (authResult['status']['signed_in']) {
-			document.location.href = '/login/Google';
-		};
-    }
-	</script>
-	<!--End of Google Login Script-->
 </head>
 <body>
 	<div class="jumbotron" align="center">
 		<h2 class="title">PinnerSpace</h2>
-		<p id="signinButton">
-			<span
-			class="g-signin"
-			data-callback="signinCallback"
-			data-clientid="261144481778-2rppbrlfrr1uhkv6t1f0d27s7n2334rh.apps.googleusercontent.com"
-			data-cookiepolicy="single_host_origin"
-			data-requestvisibleactions="http://schemas.google.com/AddActivity"
-			data-scope="https://www.googleapis.com/auth/plus.login"></span>
-		</p>
+		<p><a href="/login/Google"><img src="../images/google_active.png" onmouseover="this.src='../images/google_over.png'" onmouseout="this.src='../images/google_active.png'" onmousedown="this.src='../images/google_pressed.png'"/></a></p>
 		<p><a href="/login/FaceBook"><img src="../images/fb_active.png" onmouseover="this.src='../images/fb_over.png'" onmouseout="this.src='../images/fb_active.png'" onmousedown="this.src='../images/fb_pressed.png'"/></a></p>
-		<p><a class="btn" href="/login">Localhost Login</a></p>
+				<p><a class="btn" href="/login">Localhost Login</a></p>
 	</div>
 
 	<!--BODY-->
