--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,9 @@
 	if (window.location.href.indexOf('#_=_') > 0) {
     	window.location = window.location.href.replace(/#.*/, '');
 	}
+	window.onbeforeunload = function(e){
+		return "Are you ready to leave this page?\nFor example, have you saved your work?";
+	};
 	var canvas;
 	var bgcolor = '#FFFFFF';
 	var blkcolor = '#000000',
