--- a/www/index.html
+++ b/www/index.html
@@ -172,6 +172,10 @@
 		isSaved = false;
   	}
 
+  	function addPostIt(){
+  		var input = document.getElementById("newtext");
+  	}
+
 	/*** Code to set limit to boundaries ***/
 	// Save original state on selection (for clone)
 	function saveOrig(e) { 
