--- a/www/index.html
+++ b/www/index.html
@@ -8,18 +8,20 @@
 	<script src="../bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="../scripts/fabric.js" type="text/javascript"></script>
 	<script src="../scripts/jscolor/jscolor.js" type="text/javascript"></script>
-	<script src="../scripts/jquery.tools.min.js"></script>
+	<script src="../scripts/jquery.tools.min.js" type="text/javascript"></script>
 	<!--Canvas Script--> <!--Maybe should move to another file? When it's more or less done?-->
 	<script type = "text/javascript">
-	
 	if (window.location.href.indexOf('#_=_') > 0) {
     	window.location = window.location.href.replace(/#.*/, '');
 	}
+
+
 	window.onbeforeunload = function(e){
 		if(!isSaved){
 			return "Warning! Your board does NOT auto-save.\nAny unsaved changes will be lost (forever)!";
 		}
 	};
+
 	var canvas;
 	var bgcolor = '#FFFFFF';	// Colour setter for background
 	var blkcolor = '#000000',	// Colour setter for new block
@@ -204,8 +206,17 @@
 		isSaved=false;
   	}
 
+  	// Code for changing to info tab on select
+	function switchTab(){
+		$("#myTab > .active").removeClass("active");
+		$("#myTabContent > .active").removeClass("active");
+		$("#currObjTab").addClass("active");
+		$("#modifycurrent").addClass("in active");
+	}
+
 	/*** Code to set limit to boundaries ***/
-	// Save original state on selection (for clone)
+	// Save original state for clone (on selection)
+	// Triggers switchTab()
 	function saveOrig(e) { 
 		/*if(e.target.get('type')=="i-text") {
 			canvas.getActiveObject().tooltip({ effect: 'slide'});
@@ -213,6 +224,7 @@
   		orig = fabric.util.object.clone(e.target);
   		switchTab();
   	}
+
   	// Save last acceptable state (on scale/rotate)
 	function setLimit(e){
 		var curr=e.target;
@@ -341,11 +353,6 @@
 		}
 	}
 
-	// Code for changing to info tab on select
-	function switchTab(){
-		console.log("You have reached switchTab");
-	}
-
 	/*** Upload Image ***/
 	function imageBox(e) {
 		$("#imagebox").overlay().load();
@@ -377,7 +384,6 @@
 		})
 		$("#imagebox").overlay().close();
 	}
-
 	</script>
 	<style>
 	table.center {
@@ -481,7 +487,7 @@
 				<!--TABSS-->
 				<ul id="myTab" class="nav nav-pills">
 					<li class="active"><a href="#new" data-toggle="tab">New Object</a></li>
-					<li><a href="#modifycurrent" data-toggle="tab">Current Object</a></li>
+					<li id="currObjTab"><a href="#modifycurrent" data-toggle="tab">Current Object</a></li>
 					<li><a href="#modifycanvas" data-toggle="tab">Modify Canvas</a></li>
 				</ul>
 				<hr>
