--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 	<script src="../scripts/fabric.js" type="text/javascript"></script>
 	<script src="../scripts/jscolor/jscolor.js" type="text/javascript"></script>
 	<script src="../scripts/jquery.tools.min.js" type="text/javascript"></script>
+	<script src="../scripts/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
 	<!--Canvas Script--> <!--Maybe should move to another file? When it's more or less done?-->
 	<script type = "text/javascript">
 	if (window.location.href.indexOf('#_=_') > 0) {
@@ -39,6 +40,17 @@
     		},
     		closeOnClick: false,
    		});
+
+   		
+   		$("#bgimgbox").overlay({ // may be better to remake a new init function that calls loadcanvas
+			mask: {
+				color: '#fff',
+				loadSpeed: 200,
+   				opacity: 0.5
+    		},
+    		closeOnClick: false,
+   		});
+   		$( "#selectableBG").selectable();
 
 		if(init){
 			canvas = new fabric.Canvas('canvas');
@@ -357,6 +369,11 @@
 	function imageBox(e) {
 		$("#imagebox").overlay().load();
 	}
+
+	function bgimgBox(e) {
+		$("#bgimgbox").overlay().load();
+	}
+
 	function preloadImage() {
 		var url = document.getElementById("imageurl").value;
 		var image = document.getElementById("imageHolder");
@@ -368,6 +385,19 @@
     		$("#noPreview").show();
     	});
 	}
+
+	function bgpreloadImage() {
+		var url = document.getElementById("bgimageurl").value;
+		var image = document.getElementById("bgimageHolder");
+       	image.src = url;
+       	$("#bgnoPreview").hide();
+       	$("#bgimageHolder").show();
+       	$("img").error(function(){
+    		$(this).hide();
+    		$("#bgnoPreview").show();
+    	});
+	}
+
 	function addImage(){
 		var url = document.getElementById("imageHolder").src;
 		fabric.Image.fromURL(url, function(oImg){
@@ -384,6 +414,27 @@
 		})
 		$("#imagebox").overlay().close();
 	}
+
+	var bgselected;
+	$(function () {
+		$("#selectableBG").selectable({
+               selected: function() {
+                  $(".ui-selected", this).each(function() {
+                     bgselected = $("#selectableBG li").index(this) + 1;
+                  });
+               }
+   		});
+	});
+
+    function changeBGImg() {
+    	if (bgselected < 6) {
+	    	canvas.setBackgroundImage('../images/bg' + bgselected + '.jpg', canvas.renderAll.bind(canvas));
+    	} else {
+    		canvas.backgroundImage = false;
+    		canvas.renderAll();
+    	}
+    	isSaved = false;
+    }
 	</script>
 	<style>
 	table.center {
@@ -394,7 +445,7 @@
   		display: table-cell;
   		vertical-align: top; 
 	}
-	#imagebox {
+	#imagebox, #bgimgbox {
     	display:none;
     	width:800px;
     	border:8px solid #666;
@@ -405,13 +456,21 @@
    		-webkit-border-radius:5px;
 	}
 
-  	#imagebox div {
+  	#imagebox div, #bgimgbox div {
     	border:1px solid #3B5998;
     	background-color:#fff;
   	}
   	#noPreview {
   		display:none;
   	}
+
+  	#bgimageurl {
+  		display:none;
+  	}
+  	#selectableBG .ui-selecting { background: #FECA40; }
+ 	#selectableBG .ui-selected { background: #F39814; color: white; }
+ 	#selectableBG { padding-left: 80px; width: 800px; list-style-type: none;}
+  	#selectableBG li { padding: 1px; width: 200px; height: 140px; line-height: 135px; text-align: center; display: inline-block; vertical-align: middle;}
 	</style>
 	<!--End of Canvas Script-->
 </head>
@@ -537,6 +596,28 @@
 						Background colour:
 						<input class="color {pickerFaceColor:'#DBDBDB'}" onchange="bgcolor='#'+this.color.toString().toUpperCase()">
 						<input type="submit" value="Apply" onclick="setBG()">
+						<p class="bgimgbutton">
+							<button onclick="bgimgBox()">Background Image</button>
+						</p>
+						<div id="bgimgbox" style="position: fixed;">
+							<div>
+								<p class="close">x</p>
+								<center><h2>Background</h2></center>
+								<ul id="selectableBG">
+									<li class="ui-state-default"><img height="120" width="180" src="../images/bg1.jpg"></img></li>
+									<li class="ui-state-default"><img height="120" width="180" src="../images/bg2.jpg"></img></li>
+									<li class="ui-state-default"><img height="120" width="180" src="../images/bg3.jpg"></img></li>
+									<li class="ui-state-default"><img height="120" width="180" src="../images/bg4.jpg"></img></li>
+									<li class="ui-state-default"><img height="120" width="180" src="../images/bg5.jpg"></img></li>
+									<li class="ui-state-default"><img height="120" width="180" id="bgimageHolder" src=""></img></li>
+								</ul>
+								<center>
+								<p><input type="text" id="bgimageurl" onblur="bgpreloadImage()" placeholder="<Custom Image Url - 900 x 600>"></p>
+								<button onclick="changeBGImg()">Change Background</button>
+								<hr>
+								</center>
+							</div>
+						</div>
 					</p>
 					</div>
 				</div>
